--- a/python-intro/exercises/ex10_for_loops.ipynb
+++ b/python-intro/exercises/ex10_for_loops.ipynb
@@ -344,8 +344,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "43171f52-001b-4ade-9541-6b2cef5817de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x =2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3706b3fe-dff3-4df6-b261-24a33cddac09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 1<x<3:\n",
+    "    print('Yes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5021855-303d-4924-9196-479b86af25eb",
    "metadata": {},
    "outputs": [],
    "source": []
